# CCD_tensor_training

./: .gitattributes  .gitignore  Dockerfile  MODEL_CONFIG_README.md  README.md  adj_regression.py  build_adj_embeddings.py  deployment_util.py  docker-compose.yml  full_rank_regression.py  load_in_parallel.py  model_return_debug.py  preorder_correct.txt  preorder_output.txt  preorder_output_manual.txt  preorder_viz.py  pv.py  query_transitive.py  regression.py  requirements.txt  router_combined.json  router_en_gum.json  router_penn_wsj.json  run_regression.py  sanity_check.py  similarity_scratch.py  table.reference  temporal_parsing.py  test.py  test_hybrid.py  transitive_build_embeddings.py  util.py  wikitext_scan_cache.json  wikitext_scan_cache.json.partial
Temporal spacy/: Temporal_spaCy_displaCy.ipynb  attempt3.tex  mixed-hasse-diagram.tex  temporal_parsing.py  threaded_chisari.tex
archive/: BERT_build_embeddings.py  backup.py  decompose.py  deploy_test.py  download_mini_LM.py  naive_transitive_json.py  prepare_out_sample_embeddings.py  scratch.py  spacy_parser.py  trans_verb.py
benchmarks/: DisCoBERT_unit_test.py  DisCoBERT_wrapper.py  benchmark.py  classification.txt  discocirc_wrapper.py  failed_examples.txt  regression_test.py  scratch.py  test.txt
checkpoints/: checkpoint_20250501_185126.json  checkpoint_20250501_185150.json  checkpoint_20250501_190918.json  checkpoint_20250501_191033.json  checkpoint_20250501_191117.json  checkpoint_20250501_191118.json  checkpoint_20250501_191300.json  checkpoint_20250501_191341.json  checkpoint_20250501_191342.json  checkpoint_20250501_191426.json  checkpoint_20250501_191427.json  checkpoint_20250501_225255.json  latest_checkpoint.txt
data/: adj_dependent_data.pt  adj_empirical_embeddings.pt  dummy_model.pt  one_verb.json  top_adj_amod.json  top_adjective.json  top_adp_pobj.json  top_adp_prep_AUX_pobj_PROPN_PRON_NOUN.json  top_adp_prep_PROPN_PRON_NOUN_pobj_PROPN_PRON_NOUN.json  top_adp_prep_dative_VERB_pobj_PROPN_PRON_NOUN.json  top_adp_prt.json  top_adv.json  top_adv_advmod.json  top_aux.json  top_aux_AUX_aux.json  top_aux_nsubj_acomp.json  top_cconj_cc_ADJ_conj_ADJ.json  top_intj.json  (+17 more)
src/fastparse/pos/cpp/: CMakeLists.txt  bindings.cpp  pos_cpp.py  router_en_gum.pt  tnt_tagger.hpp
(+20405 files in other folders)
